Fix quotes in dark mode

--- a/themes/hatsusixtys-theme/static/css/style.css
+++ b/themes/hatsusixtys-theme/static/css/style.css
@@ -93,8 +93,9 @@ pre code { background: none; }
 img, iframe, video { max-width: 100%; }
 main { hyphens: auto; }
 blockquote {
-    background: #f9f9f9;
-    border-left: 5px solid #ccc;
+    color: var(--quote-foreground-color);
+    background: var(--quote-background-color);
+    border-left: 5px solid var(--quote-border-color);
     padding: 3px 1em 3px;
 }
 
